--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "torchvision",
     "tensorboard",
     "webdataset",
+    "huggingface-hub",
 ]
 dynamic = [
     "version",
