--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "tensorboard",
     "webdataset",
     "huggingface-hub",
-    "git+https://github.com/tky823/Audyn.git@v0.0.1.dev6",
+    "Audyn == 0.0.1.dev6",
 ]
 dynamic = [
     "version",
