[src] Implement custom lr scheduler

--- a/recipes/_common/conf/lr_scheduler/cos_anneal.yaml
+++ b/recipes/_common/conf/lr_scheduler/cos_anneal.yaml
@@ -1,3 +1,6 @@
-_target_: torch.optim.lr_scheduler.CosineAnnealingLR
-T_max: ${train.steps.epochs}
+_target_: birdclef2024.optim.lr_scheduler.LinearWarmupCosineAnnealingLR
+warmup_steps: 3
+suspend_steps: 0
+cooldown_steps: 10
+initial_lr: 5.0e-5
 eta_min: 1.0e-5
