[recipes] Use generator for BirdCLEF2024

--- a/recipes/Baseline/conf/test/birdclef2024baseline.yaml
+++ b/recipes/Baseline/conf/test/birdclef2024baseline.yaml
@@ -3,6 +3,9 @@ defaults:
   - override dataset: torch
   - _self_
 
+generator:
+  _target_: birdclef2024.utils.driver.BaseGenerator
+
 dataloader:
   test:
     batch_size: 1
