--- a/recipes/Baseline/conf/train/birdclef2024baseline_birdclef2024.yaml
+++ b/recipes/Baseline/conf/train/birdclef2024baseline_birdclef2024.yaml
@@ -1,4 +1,1 @@
-defaults:
-  - birdclef2024baseline
-  - override dataset: birdclef2024
-  - _self_
+../../../_common/conf/train/birdclef2024baseline_birdclef2024.yaml
