[recipes] Use composer defined in birdclef2024

--- a/recipes/_common/conf/train/birdclef2024baseline.yaml
+++ b/recipes/_common/conf/train/birdclef2024baseline.yaml
@@ -11,7 +11,7 @@ dataloader:
     collate_fn:
       _target_: audyn.utils.data.birdclef.birdclef2024.collator.BirdCLEF2024BaselineCollator
       composer:
-        _target_: audyn.utils.data.birdclef.birdclef2024.composer.BirdCLEF2024PrimaryLabelComposer
+        _target_: birdclef2024.utils.data.BirdCLEF2024PrimaryLabelComposer
         melspectrogram_transform: ${data.melspectrogram}
         audio_key: audio
         sample_rate_key: sample_rate
