[src] Use collator defined in birdclef2024

--- a/recipes/_common/conf/train/birdclef2024baseline.yaml
+++ b/recipes/_common/conf/train/birdclef2024baseline.yaml
@@ -9,7 +9,7 @@ dataloader:
   train:
     batch_size: 64
     collate_fn:
-      _target_: audyn.utils.data.birdclef.birdclef2024.collator.BirdCLEF2024BaselineCollator
+      _target_: birdclef2024.utils.data.BirdCLEF2024BaselineCollator
       composer:
         _target_: birdclef2024.utils.data.BirdCLEF2024PrimaryLabelComposer
         melspectrogram_transform: ${data.melspectrogram}
