--- a/recipes/_common/conf/test/birdclef2024baseline.yaml
+++ b/recipes/_common/conf/test/birdclef2024baseline.yaml
@@ -9,9 +9,9 @@ dataloader:
   test:
     batch_size: 1
     collate_fn:
-      _target_: audyn.utils.data.Collator
+      _target_: birdclef2024.utils.data.BirdCLEF2024ChunkingCollator
       composer:
-        _target_: birdclef2024.utils.data.BirdCLEF2024AudioComposer
+        _target_: birdclef2024.utils.data.BirdCLEF2024AudioChunkingComposer
         melspectrogram_transform: ${data.melspectrogram}
         audio_key: audio
         sample_rate_key: sample_rate
@@ -19,10 +19,17 @@ dataloader:
         waveform_key: waveform
         melspectrogram_key: log_melspectrogram
         sample_rate: ${data.audio.sample_rate}
-        duration:
+        chunk_duration: 5
+        hop_duration: 5
+        pad_duration: 0
         decode_audio_as_waveform: true
         decode_audio_as_monoral: true
+        append_end_time_to_filename: true
         training: false
+      filename_key: ${.composer.filename_key}
+      sample_rate_key: ${.composer.sample_rate_key}
+      waveform_key: ${.composer.waveform_key}
+      melspectrogram_key: ${.composer.melspectrogram_key}
 
 key_mapping:
   inference:
