--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "tensorboard",
     "webdataset",
     "huggingface-hub",
+    "natsort",
     "Audyn == 0.0.1.dev7",
 ]
 dynamic = [
