[recipes] Rename weighted dataset

--- a/recipes/_common/conf/train/birdclef2024baseline_weighted_birdclef2024.yaml
+++ b/recipes/_common/conf/train/birdclef2024baseline_weighted_birdclef2024.yaml
@@ -1,6 +1,6 @@
 defaults:
   - birdclef2024baseline
-  - override dataset: birdclef2024_weighted
+  - override dataset: weighted_birdclef2024
   - _self_
 
 dataloader:
