--- a/recipes/Baseline/conf/criterion/birdclef2024.yaml
+++ b/recipes/Baseline/conf/criterion/birdclef2024.yaml
@@ -1,13 +1,1 @@
-# Cross entropy for multi-class estimation in BirdCLEF2024.
-# Both hard and soft label are supported.
-
-defaults:
-  - cross_entropy
-  - _self_
-
-cross_entropy:
-  key_mapping:
-    estimated:
-      input: logit
-    target:
-      target: ${train.dataloader.train.collate_fn.composer.label_index_key}
+../../../_common/conf/criterion/birdclef2024.yaml
