[recipes] Use PretrainCollator

--- a/recipes/MultiDatasetPretrain/conf/train/birdclef2024baseline_pretrain-birdclef2024.yaml
+++ b/recipes/MultiDatasetPretrain/conf/train/birdclef2024baseline_pretrain-birdclef2024.yaml
@@ -6,9 +6,11 @@ defaults:
 dataloader:
   train:
     collate_fn:
+      _target_: birdclef2024.utils.data.BirdCLEF2024PretrainCollator
       composer:
         _target_: birdclef2024.utils.data.BirdCLEF2024PretrainPrimaryLabelComposer
   validation:
     collate_fn:
+      _target_: birdclef2024.utils.data.BirdCLEF2024PretrainCollator
       composer:
         _target_: birdclef2024.utils.data.BirdCLEF2024PretrainPrimaryLabelComposer
