--- a/recipes/MultiDatasetPretrain/conf/model/birdclef2024baseline_finetune.yaml
+++ b/recipes/MultiDatasetPretrain/conf/model/birdclef2024baseline_finetune.yaml
@@ -1,3 +1,3 @@
 _target_: birdclef2024.models.baseline.BaselineModel.build_from_pretrained
 pretrained_model_name_or_path: ${train.resume.checkpoint}
-num_classes: ${const:birdclef2024.utils.data.num_birdclef2024_pretrain_primary_labels}
+num_classes: ${const:audyn.utils.data.birdclef.birdclef2024.num_primary_labels}
